# entelechy

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  ENTELECHY_USER_GUIDE.md  README.md  SECURITY.md  env  faurya.md  next.config.js  observations.json  package-lock.json  package.json  pyproject.toml  skills-lock.json  test_fastmcp_tools.py
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: config.yml  feature_request.yml
.github/workflows/: deploy-docs.yml  perf-test.yml  release-integration.yml  release-tool.yml  release.yml  test.yml
cookbook/: README.md
docker/: test-image.sh  test-slim-local.sh
docker/standalone/: Dockerfile  start-all.sh
entelechy-all/: README.md  pyproject.toml
entelechy-all-npm/: README.md  package.json
entelechy-all-npm/src/: command.test.ts  command.ts  index.ts  server.test.ts  server.ts  types.ts
entelechy-all-slim/: pyproject.toml
entelechy-all/entelechy/: __init__.py  api_namespaces.py  client_wrapper.py  embedded.py  server.py
entelechy-all/tests/: README.md  __init__.py  test_cleanup_timeout.py  test_embedded.py  test_embedded_namespaces.py  test_server_integration.py
entelechy-api/: README.md  pyproject.toml
entelechy-api-slim/: README.md  pyproject.toml
entelechy-api-slim/entelechy_api/: __init__.py  banner.py  config.py  config_resolver.py  daemon.py  db_url.py  main.py  mcp_local.py  mcp_tools.py  metrics.py  migrations.py  pg0.py  server.py  tracing.py
entelechy-api-slim/tests/: conftest.py  e2e_oracle_smoke.py  test_admin_backup_restore.py  test_agents_api.py  test_alembic_dag.py  test_async_batch_retain.py  test_async_retain_tags.py  test_audit_log.py  test_bank_stats.py  test_bank_template_configurable_fields.py  test_bank_templates.py  test_base_path.py  test_batch_api.py  test_batch_api_integration.py  test_batch_api_validation.py  test_batch_chunking.py  test_causal_relations.py  test_causal_relationships.py  test_chunk_storage_upsert.py  test_chunking.py  test_codex_tool_choice.py  test_cohere_cross_encoder.py  test_combined_scoring.py  test_config_validation.py  test_consolidation.py  test_consolidation_failure_recovery.py  test_consolidation_retry_budget.py  test_consolidation_round_limit.py  test_custom_embedding_dimension.py  test_db_abstraction.py  test_db_url.py  test_deepseek_tool_call_compat.py  test_delta_editorial_fusion.py  test_delta_retain.py  test_delta_retain_duplicates.py  test_document_chunks_and_reprocess.py  test_document_tracking.py  test_embeddings_openai_batch_size.py  test_entity_labels.py  test_entity_resolver.py  (+106 more)
entelechy-cli/: .openapi-coverage.toml  Cargo.toml  build.sh  smoke-test.sh
entelechy-cli/src/: api.rs  config.rs  errors.rs  main.rs  output.rs  ui.rs  utils.rs
entelechy-cli/tests/: cli_integration.rs  cli_profile.rs  integration_test.rs
entelechy-clients/go/: README.md  api_audit.go  api_bank_templates.go  api_banks.go  api_directives.go  api_documents.go  api_entities.go  api_files.go  api_memory.go  api_mental_models.go  api_monitoring.go  api_operations.go  api_webhooks.go  client.go  configuration.go  entelechy_client.go  go.mod  integration_test.go  model_add_background_request.go  model_async_operation_submit_response.go  model_audit_log_entry.go  model_audit_log_list_response.go  model_audit_log_stats_bucket.go  model_audit_log_stats_response.go  model_background_response.go  model_bank_config_response.go  model_bank_config_update.go  model_bank_list_item.go  model_bank_list_response.go  model_bank_profile_response.go  model_bank_stats_response.go  model_bank_template_config.go  model_bank_template_directive.go  model_bank_template_import_response.go  model_bank_template_manifest.go  model_bank_template_mental_model.go  model_budget.go  model_cancel_operation_response.go  model_child_operation_status.go  model_chunk_data.go  (+96 more)
entelechy-clients/python/: README.md  openapi-generator-config.yaml  pyproject.toml
entelechy-clients/rust/: Cargo.toml  INTEGRATION.md  README.md  build.rs
entelechy-clients/typescript/: README.md  openapi-ts.config.ts  package.json
entelechy-control-plane/: next.config.js  next.config.ts  package.json  tailwind.config.ts
entelechy-control-plane/src/: instrumentation.ts  middleware.ts
entelechy-dev/: pyproject.toml
entelechy-dev/benchmarks/: README.md
entelechy-dev/entelechy_dev/: __init__.py  check_openapi_compatibility.py  cli_coverage_check.py  generate_bank_template_schema.py  generate_changelog.py  generate_llms_full.py  generate_openapi.py  sync_cookbook.py
entelechy-dev/upgrade_tests/: conftest.py  version_runner.py
entelechy-docs/: docusaurus.config.ts  package.json  sidebars.ts
entelechy-embed/: README.md  pyproject.toml  test.sh
entelechy-integration-tests/: README.md  pyproject.toml
entelechy-integrations/agno/: README.md  pyproject.toml
entelechy-integrations/agno/entelechy_agno/: __init__.py  config.py  errors.py  tools.py
entelechy-integrations/agno/tests/: test_config.py  test_tools.py
entelechy-integrations/autogen/: README.md  pyproject.toml
entelechy-integrations/autogen/entelechy_autogen/: __init__.py  _client.py  config.py  errors.py  tools.py
entelechy-integrations/autogen/tests/: test_tools.py
entelechy-integrations/crewai/: README.md  pyproject.toml  test_manual.py
entelechy-integrations/crewai/entelechy_crewai/: __init__.py  _compat.py  config.py  errors.py  storage.py  tools.py
entelechy-integrations/crewai/tests/: test_config.py  test_storage.py  test_tools.py
entelechy-integrations/pydantic-ai/: README.md  pyproject.toml
entelechy-integrations/pydantic-ai/entelechy_pydantic_ai/: __init__.py  config.py  errors.py  tools.py
entelechy-integrations/pydantic-ai/tests/: test_config.py  test_tools.py
lib/: faurya-api.ts  faurya.ts
scripts/: check-integration-lockfiles.sh  check-integration-releases.sh  generate-bank-template-schema.sh  generate-clients.sh  generate-docs-skill.sh  generate-openapi.sh  release-integration.sh  release-tool.sh  release.sh  run-upgrade-tests.sh  smoke-test-slim.sh  sync-cookbook.sh  test-doc-examples.sh  update-docs-version.sh
(+1022 files in other folders)
