[project]
name = "entelechy-autogen"
version = "0.1.2"
description = "AutoGen integration for Entelechy - persistent memory tools for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Vectorize", email = "support@vectorize.io" }
]
keywords = [
    "ai",
    "memory",
    "autogen",
    "agents",
    "entelechy",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "autogen-core>=0.4.0",
    "entelechy-client>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/garybense/entelechy"
Documentation = "https://github.com/garybense/entelechy/tree/main/entelechy-integrations/autogen"
Repository = "https://github.com/garybense/entelechy"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["entelechy_autogen"]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "autogen-agentchat>=0.4.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
]
